--- a/Task6.ipynb
+++ b/Task6.ipynb
@@ -209,6 +209,11 @@
     "\n",
     "    def exit(self):\n",
     "        self.root.destroy()\n"
+    "\n"
+    "if __name__== \"__main__\":\n"
+    "    root = tk.Tk()\n"
+    "    app = RestaurantManagementSystem(root)\n"
+    "    root.mainloop()\n"
    ]
   }
  ],
