--- a/Task6.ipynb
+++ b/Task6.ipynb
@@ -210,7 +210,7 @@
     "    def exit(self):\n",
     "        self.root.destroy()\n"
     "\n"
-    "if __name__== \"__main__\":\n"
+    "if __name__== __main__:\n"
     "    root = tk.Tk()\n"
     "    app = RestaurantManagementSystem(root)\n"
     "    root.mainloop()\n"
