--- a/Task6.ipynb
+++ b/Task6.ipynb
@@ -208,12 +208,12 @@
     "        self.calculator_display.delete(0, tk.END)\n",
     "\n",
     "    def exit(self):\n",
-    "        self.root.destroy()\n"
-    "\n"
-    "if __name__== __main__:\n"
-    "    root = tk.Tk()\n"
-    "    app = RestaurantManagementSystem(root)\n"
-    "    root.mainloop()\n"
+    "        self.root.destroy()\n",
+    "\n",
+    "if __name__== \"__main__\":\n",
+    "    root = tk.Tk()\n",
+    "    app = RestaurantManagementSystem(root)\n",
+    "    root.mainloop()\n",
    ]
   }
  ],
