--- a/Task6.ipynb
+++ b/Task6.ipynb
@@ -208,7 +208,7 @@
     "        self.calculator_display.delete(0, tk.END)\n",
     "\n",
     "    def exit(self):\n",
-    "        self.root.destroy()\n",
+    "        self.root.destroy()\n"
    ]
   }
  ],
